--- a/page1.html
+++ b/page1.html
@@ -56,13 +56,13 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="page1.html#testimonials2-1v">Harvest Moon &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#testimonials2-1y">The Mongolian Connection&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="http://undertheturquoisesky.com/" target="_blank">Under the turqouise sky &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#testimonials2-25">Victim &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#testimonials2-1y">The Mongolian Connection&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#testimonials2-22">Under the turqouise sky &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#testimonials2-25">Victim &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="carousel slide cid-t6bAWHI4dt" data-interval="false" id="slider1-1t">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="carousel slide cid-t6bAWHI4dt" data-interval="false" id="slider1-1t">
 
     
 
@@ -83,12 +83,12 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
               <img src="assets/images/poster-harvest-moon-1162x1743.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong><span style="font-style: normal;">HARVEST MOON</span>&nbsp;</strong><br><span style="font-style: normal;"><br></span><span style="font-style: normal;"><br><strong>Genre</strong>: Drama
-<br><strong>Producer</strong>: Uran Sainbileg
-<br><strong>Writer</strong>: Amra Baljinnyam
-<br><strong>Director</strong>: Bayarsaikhan Batsukh
-<br><strong>Cast</strong>: Amra Baljinnyam, Tenuun-Erdene Garamkhand
-<br></span><strong><span style="font-style: normal;">Release date</span></strong>: <span style="font-style: normal;">September 2022</span>&nbsp;<br><br></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong><span style="font-style: normal;">HARVEST MOON</span>&nbsp;</strong><br><span style="font-style: normal;"><br></span><br><strong>Genre</strong><span style="font-style: normal;">: Drama
+</span><br><strong>Producer</strong><span style="font-style: normal;">: Uran Sainbileg
+</span><br><strong>Writer</strong><span style="font-style: normal;">: Amra Baljinnyam
+</span><br><strong>Director</strong><span style="font-style: normal;">: Bayarsaikhan Batsukh
+</span><br><strong>Cast</strong><span style="font-style: normal;">: Amra Baljinnyam, Tenuun-Erdene Garamkhand
+</span><br><strong>Release date</strong>: <span style="font-style: normal;">September 2022</span>&nbsp;<br><br></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"></p>
             </div>
@@ -192,7 +192,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
 <br><strong>Producer</strong>: Uran Sainbileg, Kazuyuki Kitaki, Kentaro
 <br><strong>Writer</strong>: Amarsaikhan Baljinnyam, Kentaro</span><br><strong>Director</strong><span style="font-size: 1.05rem; text-align: justify; font-style: normal;">: Kentaro&nbsp;</span><span style="font-style: normal;"><br><strong>Cast</strong>: Amra Baljinnyam, Yuaya Yagira, Akaji Maro, Tsetsegee Byamba</span><br><strong>Release date</strong>: February 2021<span style="font-style: normal;">
 <br><br></span><br></p>
-                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-5">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; More&gt;</p>
+                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><a href="http://undertheturquoisesky.com/" target="_blank"><strong>CLICK HERE TO WATCH UNDER THE TORQUOISE SKY WEBSITE.</strong></a></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></p>
             </div>
         </div>
@@ -222,7 +222,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
               <img src="assets/images/amra-01-313x422.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong><span style="font-style: normal;">AMARSAIKHAN Baljinnyam</span></strong><br>Actor<br><br><br></p><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">Actor, writer, director Amra /Amarsaikhan Baljinnyam/ is the only filmmaker who won 3 times of the Best Actor nomination from the Mongolian Academy awards and the first Mongolian actor who stepped in Hollywood by his role as Ariq Boke (Khubilai Khan’s brother) in the Netflix original series The Marco Polo.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">After graduating the Mongolian Culture and Arts University as an actor in 1999, he has been focusing only in the cinemas, working mostly as leads in over 20 features. His first scriptwriting work “Faith” drama feature won the Best picture at the Mongolian Cinema awards and “Audience awards” at the Asian World Film Festival in Los Angeles.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">He worked as a co-writer and lead actor in the “Under the turquoise sky”, co-production of Mongolia and Japan. This road film selected as the Opening film of the 68th Mannheim-Heidelberg International Film Festival where it took also world premiere there. It won the “New Talent award” and “FIPRESCI International Film Critique award” at the MHIFF.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">He co-produced and starred as one of the leads, THE MONGOLAIN CONNECTION, action feature that is co-production of Mongolia-Kazakhstan-US in 2019. This film won the Outstanding action feature and Outstanding fight choreography awards at a festival in Buffalo, New York. This film has been distributing in the international market through Princ Films, based in Los Angeles.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">His first directing debut, HARVEST MOON, drama feature is now in a post. He once quoted; “I never assumed I will be a film director. But when it happens it felt so natural to me. Maybe it is also because of I had experience in script writing. Generally, I love being a filmmaker more than just an actor.”&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">His recent work, “VICTIM’ 10 episodes of limited series released in March 2022 in locally. He is the scriptwriter and a lead. It is enormously good received by the local audiences. &nbsp;</span></div><p></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong><span style="font-style: normal;">AMARSAIKHAN Baljinnyam</span></strong><br>Actor<br><br></p><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">Actor, writer, director Amra /Amarsaikhan Baljinnyam/ is the only filmmaker who won 3 times of the Best Actor nomination from the Mongolian Academy awards and the first Mongolian actor who stepped in Hollywood by his role as Ariq Boke (Khubilai Khan’s brother) in the Netflix original series The Marco Polo.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">After graduating the Mongolian Culture and Arts University as an actor in 1999, he has been focusing only in the cinemas, working mostly as leads in over 20 features. His first scriptwriting work “Faith” drama feature won the Best picture at the Mongolian Cinema awards and “Audience awards” at the Asian World Film Festival in Los Angeles.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">He worked as a co-writer and lead actor in the “Under the turquoise sky”, co-production of Mongolia and Japan. This road film selected as the Opening film of the 68th Mannheim-Heidelberg International Film Festival where it took also world premiere there. It won the “New Talent award” and “FIPRESCI International Film Critique award” at the MHIFF.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">He co-produced and starred as one of the leads, THE MONGOLAIN CONNECTION, action feature that is co-production of Mongolia-Kazakhstan-US in 2019. This film won the Outstanding action feature and Outstanding fight choreography awards at a festival in Buffalo, New York. This film has been distributing in the international market through Princ Films, based in Los Angeles.&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">His first directing debut, HARVEST MOON, drama feature is now in a post. He once quoted; “I never assumed I will be a film director. But when it happens it felt so natural to me. Maybe it is also because of I had experience in script writing. Generally, I love being a filmmaker more than just an actor.”&nbsp;</span></div><div style="font-style: normal; text-align: justify;"><span style="font-size: 1.05rem;">His recent work, “VICTIM’ 10 episodes of limited series released in March 2022 in locally. He is the scriptwriter and a lead. It is enormously good received by the local audiences. &nbsp;</span></div><p></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"></p>
             </div>
@@ -325,7 +325,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">17PRODUCTION.MN | © 2022 &nbsp;ALL RIGHTS RESERVED</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">17PRODUCTION.MN | ©2022 &nbsp;ALL RIGHTS RESERVED</p>
             </div>
         </div>
     </div>
