--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="carousel slide cid-t6guEBXxIx" data-interval="false" id="slider1-2d">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="carousel slide cid-t6guEBXxIx" data-interval="false" id="slider1-2d">
 
     
 
@@ -130,7 +130,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     </div>
 </section>
 
-<section once="footers" class="cid-t6gyBX5cjZ" id="footer6-2r">
+<section once="footers" class="cid-t6gHlDfcGt" id="footer6-2z">
 
     
 
@@ -139,7 +139,9 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">17PRODUCTION | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    © 17PRODUCTION | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022
+                </p>
             </div>
         </div>
     </div>
