--- a/page4.html
+++ b/page4.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="testimonials2 cid-t6gxr1UrIQ mbr-parallax-background" id="testimonials2-2l">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="testimonials2 cid-t6gxr1UrIQ mbr-parallax-background" id="testimonials2-2l">
 
     
 
@@ -102,7 +102,7 @@
     </figure>
 </section>
 
-<section once="footers" class="cid-t6gyBX5cjZ" id="footer6-2r">
+<section once="footers" class="cid-t6gHlDfcGt" id="footer6-2z">
 
     
 
@@ -111,7 +111,9 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">© 2022 All rights reserved | 17PRODUCTION.MN</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    © 17PRODUCTION | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022
+                </p>
             </div>
         </div>
     </div>
